<resources>
    <string name="app_name">probaFirebase</string>
    <string name="login">Login</string>
    <string name="contrasenya">Contrasenya</string>
    <string name="usuari">Usuari</string>
    <string name="login_">Login:</string>
    <string name="register">Register</string>
    <string name="register_">Register:</string>
    <string name="preu">preu:</string>
    <string name="nom">nom:</string>
    <string name="new_moble">new moble</string>
    <string name="nom_del_producte">nom del producte</string>
    <string name="preu_del_producte">preu del producte</string>
    <string name="afegir_moble">Afegir moble</string>
    <string name="returnto">return</string>
    <string name="update_moble">actualitzar moble</string>
    <string name="eliminar_producte">eliminar producte</string>
</resources>